// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Standard template renders a single child element 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <ChildrenContainer>
      <ChildContainer
        key="standard-1"
      >
        <ExampleChild
          id="standard-1"
        />
      </ChildContainer>
    </ChildrenContainer>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`2. Standard template renders two child elements 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <ChildrenContainer>
      <ChildContainer
        key="standard-1"
      >
        <ExampleChild
          id="standard-1"
        />
      </ChildContainer>
      <Separator
        key="separator-standard-2"
      />
      <ChildContainer
        key="standard-2"
      >
        <ExampleChild
          id="standard-2"
        />
      </ChildContainer>
    </ChildrenContainer>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`3. Standard template renders three child elements 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <ChildrenContainer>
      <ChildContainer
        key="standard-1"
      >
        <ExampleChild
          id="standard-1"
        />
      </ChildContainer>
      <Separator
        key="separator-standard-2"
      />
      <ChildContainer
        key="standard-2"
      >
        <ExampleChild
          id="standard-2"
        />
      </ChildContainer>
      <Separator
        key="separator-standard-3"
      />
      <ChildContainer
        key="standard-3"
      >
        <ExampleChild
          id="standard-3"
        />
      </ChildContainer>
    </ChildrenContainer>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`7. Standard tracking roles 1`] = `
Array [
  "standard-1",
  "standard-2",
  "standard-3",
]
`;

exports[`8. Lead and two tracking roles 1`] = `
Array [
  "lead-and-two",
  "lead-and-two-supporting-1",
  "lead-and-two-supporting-2",
]
`;
